// TODO NWS URLs http to https const myapp
// TODO refactor nexrad radar to match architecture of wXL23 Metal to remove code duplicity
// TODO convert to new NavDrawer: USWarningsWith, ModelGeneric, ModelSPCHRRR, SPCCompmap, SPCStormreports, GOES16
// TODO in general reduce static methods ( object methods ) in favor of instance methods
// TODO convert other imageMaps to use new clickHandler
// TODO consolidate OPC,NWSGOES, NWS Mosaic, Observations into one activity using class to store pref/lists, etc
// TODO convert lightning to nav drawer

55095 2019_01_05 misc code refactor
                 [BUG] NWS Radar mosaic was not saving posn correctly
                 add ObjectImagesCollection and migrate OPC
55094 2019_01_04 misc code refactor
                 enable additional radar content in locfrag
55093 2019_01_03 [BUG] no vtec nws office for sps in uswarn
                 minor enhancement in ObjectSpinner to handle listener setup in constructors
55092 2019_01_01 misc code cleanup, update license for 2019
55091 2018_12_31 misc code refactor
55090 2018_12_30 misc code refactor
55089 2018_12_30 misc code refactor
55088 2018_12_29 WPC Text and SPC SREF , optimize on ObjectNavDrawerCombo
                 [BUG] NSSL WRF was not checking for string size in getImg
                 add ObjectRecyclerView
55087 2018_12_29 ObjectTouchImageView and enhance ObjectNavDrawerCombo
55086 2018_12_28 [BUG] crash on main screen conditions icon
55085 2018_12_27 convert observations,mosaic to use nav drawer
                 remove local forecast item from main menu
                 remove about from main menu and move to settings
55084 2018_12_27 reorg GOES16
55083 2018_12_26 ObjectFab - rationalize
55082 2018_12_25 ObjectFab - rationalize
55081 2018_12_25 [BUG] AWC forecast URLs changed in WPC IMG
                 refactor NWS Icon and Metar stuff
55080 2018_12_21 code cleanup, continue moving semi-common code to UtilityRadarUI