@@ -56,7 +56,6 @@ class SettingsColorPaletteActivity : BaseActivity() {
     private lateinit var rcAdapter: TileAdapterColorPalette
     private var type = ""
     private var globalPosition = 0
-    private lateinit var a: Activity
     private lateinit var fab1: ObjectFab
     private lateinit var fab2: ObjectFab
     private var builtinStr = ""
@@ -77,7 +76,6 @@ class SettingsColorPaletteActivity : BaseActivity() {
         )
         val turl = intent.getStringArrayExtra(TYPE)
         type = turl[0]
-        a = this
         contextg = this
         if (type == "94") {
             title = "Color Palette - Reflectivity"
@@ -147,7 +145,6 @@ class SettingsColorPaletteActivity : BaseActivity() {
                         false
                     )
                 }
-                //prefArr.filter { it != "" }.mapTo(allItems) { TileObjectColorPalette(it, toolbar, prefToken, cg, type, false) }
                 builtinStr = "false"
                 allItems.forEach {
                     if (MyApplication.radarColorPalette[type] == it.colorMapLabel && it.builtin) {
@@ -265,7 +262,7 @@ class SettingsColorPaletteActivity : BaseActivity() {
                 rcAdapter = TileAdapterColorPalette(rowListItem, UIPreferences.tilesPerRow)
                 rView.adapter = rcAdapter
             } else {
-                UtilityAlertDialog.showHelpText(builtInHelpMsg, a)
+                UtilityAlertDialog.showHelpText(builtInHelpMsg, this)
             }
         } else {
             if (!rowListItem[globalPosition].builtin) {
@@ -299,7 +296,7 @@ class SettingsColorPaletteActivity : BaseActivity() {
                 rcAdapter = TileAdapterColorPalette(rowListItem, UIPreferences.tilesPerRow)
                 rView.adapter = rcAdapter
             } else {
-                UtilityAlertDialog.showHelpText(builtInHelpMsg, a)
+                UtilityAlertDialog.showHelpText(builtInHelpMsg, this)
             }
         }
     }
