@@ -5,9 +5,10 @@
 // TODO convert to new NavDrawer: USWarningsWith, ModelGeneric, ModelSPCHRRR, SPCCompmap, SPCStormreports, GOES16
 // TODO in general reduce static methods ( object methods ) in favor of instance methods
 // TODO convert other imageMaps to use new clickHandler
-// TODO consolidate OPC,NWSGOES, NWS Mosaic, Observations into one activity using class to store pref/lists, etc
+// TODO consolidate NWSGOES, NWS Mosaic into one activity using class to store pref/lists, etc
 // TODO convert lightning to nav drawer
 
+55096 2019_01_05
 55095 2019_01_05 misc code refactor
                  [BUG] NWS Radar mosaic was not saving posn correctly
                  add ObjectImagesCollection and migrate OPC
